/***********************************************************************
X3 ChangeLog

2009-01-29  Alex Schumann  <rubin@afternet.org>

	* src/hash.c: Added a function to check if a user pointer
	points to a user that actually exists.

	* src/dict-splay.c: added a dict function to check if data exists
	in a dict list.

	* src/opserv.c: added safety checks on nick and auth callbacks to
	ensure the user still exists (and wasn't removed by a previous
	callback)

	* src/mod-track.c: added safety checks on nick and auth callbacks
	to ensure the user still exists

2009-01-27  Alex Schumann  <rubin@afternet.org>

	* src/modpython.py: Comment out debug printing

	* src/plugins/hangman: New example plugin: Hangman game

2009-01-27  Alex Schumann  <rubin@afternet.org>

	* src/opserv.c: Fix a hole Sindacious found, where alerts on account
	don't trigger because they arent looked for during/after auth.

2009-01-26  Alex Schumann  <rubin@afternet.org>

	* src/plugins/annoy/plugin.py: more test code

	* src/mod-python.c: added emb_get_info, silenced warnings, and stub 
	TODO comments for all the handlers and emb functions we need to 
	create. search for TODO and lend a hand! :)

2009-01-26  Alex Schumann  <rubin@afternet.org>

	* src/plugins/annoy/plugin.py: new version of test plugin

2009-01-25  Alex Schumann  <rubin@afternet.org>

	* Makefile.am: forgot to copy modpython.py where it goes.

2009-01-24  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: added plugin hook to log to x3 logs, and worked
	out the basics of callback registration.

	* src/modpython.py: x3 logging hook and new callback registration

	* Makefile.am: install modpython.py and plugins/ during make install

	* install-r.sh: shell script to do recursive copy with exclusions

2009-01-23  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: refactor to use class-based hook manager. Seems to
	run now. Also added better comments.
